# local-llm-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/local_llm_agent/: __init__.py  agent.py  cli.py  config.py  ollama_client.py
src/local_llm_agent/tools/: __init__.py  file_reader.py  project_scanner.py
tests/: test_agent.py  test_cli.py  test_config.py  test_file_reader.py  test_ollama_client.py  test_project_scanner.py
